@@ -33,7 +33,9 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {CHAR_LEFT,"$kcub1"},
    {CHAR_RIGHT,"$kcuf1"},
    {WORD_LEFT,"\033|$kcub1"},
+   {WORD_LEFT,"$kLFT"},
    {WORD_RIGHT,"\033|$kcuf1"},
+   {WORD_RIGHT,"$kRIT"},
    {LINE_BEGIN,"$kbeg"},
    {LINE_BEGIN,"$khome"},
    {LINE_BEGIN,"$ka1"},
@@ -47,7 +49,7 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {LINE_END,"\033|e"},
    {LINE_END,"\033|E"},
    {TEXT_BEGIN,"$kBEG"},
-   {TEXT_BEGIN,"$kHOME"},
+   {TEXT_BEGIN,"$kHOM"},
    {TEXT_BEGIN,"\033|$kbeg"},
    {TEXT_BEGIN,"\033|$khome"},
    {TEXT_BEGIN,"\007|^B"},
@@ -60,12 +62,16 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {TEXT_END,"\007|E"},
    {NEXT_PAGE,"$knp"},
    {NEXT_PAGE,"$kc3"},
+   {NEXT_PAGE,"$knxt"},
    {NEXT_PAGE,"\033|$kcud1"},
    {PREV_PAGE,"$kpp"},
    {PREV_PAGE,"$ka3"},
+   {PREV_PAGE,"$kprv"},
    {PREV_PAGE,"\033|$kcuu1"},
    {PAGE_TOP,"\033|$kpp"},
+   {PAGE_TOP,"$kPRV"},
    {PAGE_BOTTOM,"\033|$knp"},
+   {PAGE_BOTTOM,"$kNXT"},
    {TO_LINE_NUMBER,"\007|\007"},
    {TO_LINE_NUMBER,"\007|g"},
    {TO_LINE_NUMBER,"\007|G"},
@@ -89,6 +95,7 @@ ActionCodeRec  DefaultActionCodeTable[]=
    {BACKSPACE_CHAR,"$kbs"},
    {DELETE_CHAR,"$kdch1"},
    {FORWARD_DELETE_WORD,"\033|$kdch1"},
+   {FORWARD_DELETE_WORD,"$kDC"},
    {DELETE_WORD,"^W"},
    {BACKWARD_DELETE_WORD,"\033|$kbs"},
    {FORWARD_DELETE_WORD,"\033|\177"},
